--- a/skingreen/build.gradle
+++ b/skingreen/build.gradle
@@ -2,42 +2,35 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
+
+
+
     defaultConfig {
-        applicationId "com.onexzgj.skin.skin"
+        applicationId "com.lnsoft.drawable.skingreen"
         minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    //rxjava
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.11'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    //butterknife
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:cardview-v7:27.1.1'
-
-    //baseAdapterHelper
-    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
-    compile 'com.android.support:preference-v14:26.1.0'
-
-    //utils
-    compile 'com.blankj:utilcode:1.9.6'
 }
